# trilium-pydantic

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tests/: conftest.py  debug_connection.py  test_client.py  test_connection_script.py  test_runner.py
src/trilium_pydantic/: __init__.py  client.py  config.py  example_script.py  exceptions.py  models.py  settings.py  test_client_note_attributes.py  test_models_note_attributes.py
src/trilium_pydantic/models/: __init__.py  notes.py
src/trilium_pydantic/resources/: __init__.py  notes.py
